@@ -1,6 +1,7 @@
 0.3.1+ (in development)
 ------------------------------------------------------------------------
 - Feature: [#13000] objective_options command for console
+- Fix: [#3200] Close Construction window upon selecting vehicle page
 
 0.3.1 (2020-09-27)
 ------------------------------------------------------------------------
